--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -14,7 +14,8 @@
         <h1>#{testView.string}</h1>
         <h:form id="frmTest">
             <h:outputText value="Bug: Checkbox gets rendered also for the unselectable node, when filterBy=... is added"/>
-
+            <p:separator/>
+            <h:outputText value="Hint: Somehow the styleclass ui-treetable-selectable-node is also added to the tr element corresponding with the unselectable node"/>
             <p:treeTable value="#{testView.baseTreeNode}" var="node" selection="#{testView.selectedTreeNodes}" selectionMode="checkbox">
                 <p:column filterBy="#{node.selectionName}">
                     <h:outputText value="#{node.selectionName}"/>
