test modified to show propagation issue

--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -10,18 +10,23 @@
         <h:outputScript name="test.js" />
     </h:head>
     <h:body>
-
         <h1>#{testView.string}</h1>
         <h:form id="frmTest">
-            <h:outputText value="Bug: Checkbox gets rendered also for the unselectable node, when filterBy=... is added"/>
+            <h:outputText value="Bug: When the selectable node is selected, also the unselectable node gets selected via the propagationUp mechanism"/>
             <p:separator/>
-            <h:outputText value="Hint: Somehow the styleclass ui-treetable-selectable-node is also added to the tr element corresponding with the unselectable node"/>
+            <h:outputText value="Hint: The popagation methods in the CheckBoxTreeNode class should check whether the node is selectable or not"/>
             <p:treeTable value="#{testView.baseTreeNode}" var="node" selection="#{testView.selectedTreeNodes}" selectionMode="checkbox">
                 <p:column filterBy="#{node.selectionName}">
                     <h:outputText value="#{node.selectionName}"/>
                 </p:column>
             </p:treeTable>
-            
+            <p:commandButton update="output" value="Show selections:"/>
+            <h:panelGroup layout="block" id="output">
+                <ui:repeat value="#{testView.selectedTreeNodes}" var="selNode">
+                    <h:outputText value="#{selNode.getData().selectionName}"/>
+                    <br/>
+                </ui:repeat>
+            </h:panelGroup>
         </h:form>
 
     </h:body>
